[package]
name = "generic_modular"
version = "0.1.0"
authors = ["chankyin <chankyin1970@gmail.com>"]
edition = "2018"
description = "Modular arithmetic library in Rust with generic number types"
license = "Apache-2.0"
categories = ["no-std", "science"]
keywords = ["mod", "modular", "arithmetic"]
repository = "https://github.com/chankyin/generic_modular.git"
homepage = "https://github.com/chankyin/generic_modular"

[dependencies]
lazy_static = "1.3.0"
num-traits = "0.2.8"
static_assertions = "0.3.3"

[badges]
travis-ci = { repository = "chankyin/generic_modular" }
